Fix bug View on mobile devices

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -8,7 +8,8 @@
   align-self: flex-start;
   font-size: 1.2em;
   text-align: justify;
-  width: 75ch;
+  width: 100%;
+  max-width: 75ch;
   margin: 3rem auto;
   padding: 1rem;
   transition: $transition;
