--- a/src/scss/tareas.scss
+++ b/src/scss/tareas.scss
@@ -23,7 +23,9 @@
   }
 
   a {
-    display: block;
+    width: 100%;
+    overflow: auto;
+    display: inline-block;
     padding: 0.5rem 0;
     color: var(--third-alt);
     text-shadow: 5px 5px 5px var(--primary);
